# recipe-app

./: prestart.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 5a9442b6e0c0_creating_initial_tables.py  7cf03b204a47_add_description_column_to_recipe.py
app/: main.py
app/api/: deps.py
app/api/api_v1/endpoints/: auth.py  recipe.py
app/core/: auth.py  config.py  security.py
app/crud/: base.py  crud_recipe.py  crud_user.py
app/db/: base_class.py  init_db.py  session.py
app/models/: user.py
app/schemas/: recipe.py  user.py
