[tool.poetry]
name = "app"
version = "0.0.1"
description = "Recipe App"
authors = ["Debasish Dutta"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
uvicorn = {extras=["standard"], version="~0.23.0"}
fastapi = "^0.104.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = ">=2.0"}
SQLAlchemy = "~1.4.3"
alembic = "~1.6.5"
tenacity = "~8.0.1"
httpx = "~0.18.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
mysql-connector-python = "^8.0"
pydantic-settings

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"
